# about-myself

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-image.yml
app/: app.py  requirements.txt
app/static/: script.js  style.css
app/templates/: index.html
data/config/: config.json
