[project]
name = "about-myself"
version = "1.0.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.9.0",
    "click>=8.1.8",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "importlib-metadata>=8.7.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "packaging>=25.0",
    "uwsgi-tools",
    "werkzeug>=3.1.3",
    "zipp>=3.21.0",
]
